--- a/css/example.css
+++ b/css/example.css
@@ -81,13 +81,15 @@ html, body {
     -o-transform: perspective(800);
     transform: perspective(800);
 
+
     position: absolute;
     font-size: 40px;
     opacity: 0.8;
     color: #fff;
-    width: 60%;
-    top: 4.7%;
-    left: 20%;
+    width: 80%;
+    top: 6%;
+    padding: 10px;
+    left: 10%;
 }
 
 .info:hover {
