kinda fixed top part

--- a/css/example.css
+++ b/css/example.css
@@ -87,7 +87,7 @@ html, body {
     opacity: 0.8;
     color: #fff;
     width: 80%;
-    top: 6%;
+    top: 300px;
     padding: 10px;
     left: 10%;
 }
