--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,10 @@
 @charset "UTF-8";
 /*
-
 Style   : MobApp CSS
 Version : 1.0
 Author  : Surjith S M
 URI     : https://surjithctly.in/
-
 Copyright © All rights Reserved 
-
 */
 
 
@@ -23,7 +20,6 @@ Copyright © All rights Reserved
 7. PRICING
 8. CALL TO ACTION
 9. FOOTER
-
 ------------------------*/
 
 
@@ -681,9 +677,7 @@ header {
 }
 
 /* -------------------------------- 
-
 Primary style
-
 -------------------------------- */
 
 
@@ -1159,7 +1153,7 @@ Primary style
   }
   div.card {
     background: #FFF;
-    display: inline-block;
+/*    display: inline-block;*/
     margin: 8px;
     max-width: 300px;
     -webkit-perspective: 1000;
@@ -1294,9 +1288,3 @@ Primary style
   }
 
 
-
-  
-
-
-
-  
