--- a/css/style.css
+++ b/css/style.css
@@ -388,7 +388,12 @@ header {
     font-weight: 300;
     transition: all 0.3s ease;
 }
-
+.white{
+    background-color: white;
+}
+.nobg {
+    background-color: transparent !important;
+}
 @media (max-width:992px) {
     .circle-icon {
         width: 70px;
