--- a/officers.css
+++ b/officers.css
@@ -23,16 +23,12 @@ body {
   transition: .5s ease;
 }
 .card {
+  border: none !important;
   background: #FFFFFF;
   display: block !important;
   max-width: 1000px !important;
-  margin: 100px auto !important;
+  margin: -50px auto !important;
   text-align: center !important;
-  border-radius: 12px;
-  -webkit-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
-          box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
   padding: 48px;
   text-align: center;
 }
