--- a/css/competitions.css
+++ b/css/competitions.css
@@ -1,107 +1,140 @@
-.competitions {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-    background-color: transparent !important;
-    color: #fff !important;
+.app {
+  font-family: 'Avenir Next', sans-serif;
+  color: #031d3d;
+  padding-bottom: 152px;
 }
 
-.competitions body {
+.container {
   width: 100%;
+  max-width: 960px;
   margin: 0 auto;
-  height: auto;
-  max-width: 1400px;
-  padding: 15px;
-    background-color: transparent !important;
-    color: #fff !important;
+  padding: 0 38px;
+  box-sizing: border-box;
 }
 
-.competitions h5 {
-  margin-bottom: 0;
-    background-color: transparent !important;
-    color: #fff !important;
-}
-
-.competitions h5 a {
-  font-family: "azo-sans-web", sans-serif;
-  font-weight: 400;
-  font-size: 22px;
-  line-height: 32px;
-  color: #435560;
-  margin: 0;
-    background-color: transparent !important;
-    color: #fff !important;
-}
-.competitions h5 a:hover {
-  color: #435560;
-    background-color: transparent !important;
-    color: #fff !important;
-}
-
-.competitions p {
-  font-family: "azo-sans-web", sans-serif;
-  font-weight: 200;
-  line-height: 26px;
-  color: #414042;
-  margin: 0;
-    background-color: transparent !important;
-    color: #fff !important;
-}
-
-.competitions #accordion .card {
-  border-top: none;
-  border-left: none;
-  border-right: none;
-  border-radius: 0;
-  border-bottom: 1px solid #d1d3d4;
-background-color: transparent !important;
-    color: #fff !important;
-}
-.competitions #accordion .card .card-header {
-  background: none;
+button {
   border: none;
-  padding: 25px 0;
-    background-color: transparent !important;
-    color: #fff !important;
-}
-.competitions #accordion .card .card-header.top-headline {
-  padding: 0 0 25px;
-    background-color: transparent !important;
-    color: #fff !important;
-}
-.competitions #accordion .card .card-body {
-    color: #fff !important;
-  padding: 0 0 25px;
-    background-color: transparent !important;
+  background: none;
+  font-size: inherit;
+  color: inherit;
+  font-family: inherit;
+  padding: 0;
+  cursor: pointer;
+  outline: none;
 }
 
-.competitions .vertical-tabs .nav-link {
-  text-transform: uppercase;
-  color: #dddddd;
-  font-family: "azo-sans-web", sans-serif;
-  font-size: 12px;
-  font-weight: 500;
-  border-radius: 0;
-  padding: 30px;
-    background-color: transparent !important;
+.accordions__controls {
+  display: flex;
+  justify-content: flex-end;
+  padding-top: 38px;
+  padding-bottom: 19px;
 }
-@media (min-width: 768px) {
-  .competitions .vertical-tabs .nav-link {
-    border-bottom: 1px solid #d1d3d4;
-      background-color: transparent !important;
-  }
+.accordions__control {
+  font-weight: 600;
+  font-size: 18px;
+  color: #00a5a9;
+  transition: color .3s ease-in-out;
 }
-.competitions .vertical-tabs .nav-link.active {
-  border-bottom: none;
-    background-color: transparent !important;
+.accordions__control:hover, .accordions__control:focus {
+  color: #031d3d;
 }
-.competitions .vertical-tabs .tab-content {
-  margin-top: 30px;
-    background-color: transparent !important;
+.accordions__header {
+  font-size: 32px;
+  font-weight: 600;
+  background-color: #f0f0f0;
+  position: relative;
+  border-bottom: solid 1px #d3d3d3;
 }
-@media (min-width: 768px) {
-  .competitions .vertical-tabs .tab-content {
-    margin-top: 22px;
-    background-color: transparent !important;
-  }
+.accordions__container {
+  display: flex;
+}
+.accordions__title {
+  position: relative;
+  padding: 28px 0;
+  padding-right: 38px;
+  flex: 1;
+  z-index: 2;
+  background-color: #f0f0f0;
+}
+/*
+.accordions__title::after {
+  content: '';
+  position: absolute;
+  bottom: -1px;
+  left: 0;
+  right: 0;
+  border-bottom: solid 1px #d3d3d3;
+  z-index: 1;
+}
+*/
+.accordions__button {
+  color: white;
+  padding-left: 38px;
+  padding-right : 38px;
+  line-height: 1;
+/*  transition: padding .3s ease-in-out;*/
+  background-color: #08ced2;
+}
+.accordions__button::before {
+
+/*
+  content: '';
+  background-color: #08ced2;
+  position: absolute;
+  top: 0;
+  left: 50%;
+  right: 0;
+  bottom: 0;
+  bottom: -2px;
+  z-index: 1;
+  border-bottom: solid 1px #09a5a8;
+  cursor: pointer;
+  transition: background-color .3s ease-in-out, border-color .3s ease-in-out;
+*/
+
+}
+.accordions__button:hover {
+  padding-right: 38px;
+}
+.accordions__button:hover::before {
+  background-color: #09a5a8;
+}
+.accordions__button:focus::before {
+  background-color: #09a5a8;
+}
+.accordions__button:active, .accordions__button--active {
+  padding-right: 38px;
+}
+.accordions__button:active::before, .accordions__button--active::before {
+  background-color: #031d3d !important;
+  border-bottom: solid 1px #031730;
+}
+.accordions__button:active .accordions__icon, .accordions__button--active .accordions__icon {
+  transform: rotate(45deg);
+}
+.accordions__icon {
+  position: relative;
+  z-index: 2;
+  transition: transform .3s ease-in-out;
+}
+.accordions__content {
+  max-height: 0;
+  opacity: 0;
+  overflow: hidden;
+  transition: max-height 1.2s ease-in-out, opacity .6s ease-in-out .6s, transform .6s ease-in-out .6s;
+  transform: translateY(38px);
+}
+.accordions__content--expanded {
+  max-height: 200vh;
+  opacity: 1;
+  padding-bottom: 76px;
+  transform: none;
+}
+
+.rich-text {
+  font-size: 18px;
+  line-height: 32px;
+}
+.rich-text p {
+  margin-top: 38px;
 }
