--- a/css/style.css
+++ b/css/style.css
@@ -1554,3 +1554,10 @@ header {
 .bot-wrapper {
 	margin: 0 25%;
 }
+
+.backgrounddiv {
+    width : 100%;
+    height : 600px;
+    background: linear-gradient(to right, #141E30 , #243B55);
+    
+}
