--- a/css/style.css
+++ b/css/style.css
@@ -1557,7 +1557,11 @@ header {
 
 .backgrounddiv {
     width : 100%;
-    height : 600px;
-    background: linear-gradient(to right, #141E30 , #243B55);
-    
+    height : 550px;
+    background: linear-gradient(to right, #141E30 , #243B55);  
+}
+.backgrounddiv {
+    width : 100%;
+    height : 550px;
+    background: linear-gradient(to right, #1488CC , #2B32B2);
 }
