--- a/css/style.css
+++ b/css/style.css
@@ -1557,11 +1557,11 @@ header {
 
 .backgrounddiv {
     width : 100%;
-    height : 550px;
+    height : 560px;
     background: linear-gradient(to right, #141E30 , #243B55);  
 }
-.backgrounddiv {
+.backgrounddiv2 {
     width : 100%;
-    height : 550px;
+    height : 560px;
     background: linear-gradient(to right, #1488CC , #2B32B2);
 }
