--- a/css/competitions2.css
+++ b/css/competitions2.css
@@ -1,7 +1,6 @@
 .app {
   font-family: 'Avenir Next', sans-serif;
-  color: #fff;
-  padding-bottom: 152px;
+  color: #000;
 }
 
 .container {
@@ -42,7 +41,7 @@ button {
 .accordions__header {
   font-size: 32px;
   font-weight: 600;
-  background-color: #234485;
+  background-color: #d1d8e0;
   position: relative;
   border-bottom: solid 1px 234485;
 }
@@ -55,8 +54,8 @@ button {
   padding-right: 38px;
   flex: 1;
   z-index: 2;
-  background-color: #234485;
-  color: #fff;
+  background-color: #d1d8e0;
+  color: #485460;
 }
 /*
 .accordions__title::after {
@@ -75,7 +74,7 @@ button {
   padding-right : 38px;
   line-height: 1;
 /*  transition: padding .3s ease-in-out;*/
-  background-color: #FA3284;
+  background-color:#485460;
 }
 .accordions__button::before {
 
