--- a/css/style.css
+++ b/css/style.css
@@ -1297,11 +1297,8 @@ Primary style
     width: 320px;
     overflow: hidden;
     background-color: white;
-    position: fixed;
-    top: 100px;
-    left: 50%;
-    -webkit-transform: translateX(-50%);
-            transform: translateX(-50%);
+    -webkit-transform: translateX(50%);
+            transform: translateX(50%);
     -webkit-box-shadow: 0px 3px 3px 0px rgba(50, 50, 50, 0.5);
             box-shadow: 0px 3px 3px 0px rgba(50, 50, 50, 0.5);
     -webkit-transition: 0.3s ease;
@@ -1543,9 +1540,6 @@ Primary style
 .botui-action-text-icon {
 	color: currentColor;
 }
-
-
-
 header {
 	text-align: center;
 }
@@ -1564,4 +1558,9 @@ header {
     width : 100%;
     height : 560px;
     background: linear-gradient(to right, #1488CC , #2B32B2);
+}
+.backgrounddiv3 {
+    width : 100%;
+    height : 850px;
+    background: linear-gradient(to right, #1e3c72 , #2a5298);
 }
