--- a/css/style.css
+++ b/css/style.css
@@ -167,8 +167,17 @@ p.lead {
     margin-bottom: 3rem;
 }
 
-.section-title white {
+.section3-title {
+  text-align: center;
+  margin-bottom: 3rem;
+}
+
+.section3-title h3 {
     color: #FFF;
+}
+
+.section3-title small {
+  color: #eee;
 }
 
 .section-title2 {
@@ -1562,7 +1571,6 @@ header {
 	margin: 0 25%;
 }
 
-<<<<<<< HEAD
 
 .featured-area {
   background: #fff;
@@ -1618,7 +1626,6 @@ header {
 .featured-area .single-feature:hover span {
   color: #8dda06;
 }
-=======
 .backgrounddiv {
     width : 100%;
     height : 560px;
@@ -1629,4 +1636,3 @@ header {
     height : 560px;
     background: linear-gradient(to right, #1488CC , #2B32B2);
 }
->>>>>>> c6c7e34d971c2a1d0ef81ad32d4a4988fbb23131
