--- a/css/style.css
+++ b/css/style.css
@@ -1637,7 +1637,7 @@ header {
 }
 .backgrounddiv2 {
     width : 100%;
-    height : 660px;
+    height : 100%;
     background: linear-gradient(to right, #1488CC , #2B32B2);
     border: 5px solid red;
 }
