--- a/css/style.css
+++ b/css/style.css
@@ -1632,22 +1632,28 @@ header {
 
 .backgrounddiv {
     width : 100%;
-    height : 560px;
+    height : 100%;
     background: linear-gradient(to right, #141E30 , #243B55);  
+    border: 5px solid red;
 }
 .backgrounddiv2 {
     width : 100%;
-    height : 100%;
     background: linear-gradient(to right, #1488CC , #2B32B2);
-    border: 5px solid red;
 }
 .backgrounddiv3 {
     width : 100%;
-    height : 500px;
+    height : 100vh;
     background: linear-gradient(to right, #1e3c72 , #2a5298);
 }
 
 #container {
-    
 }
 
+.centertypewriter {
+    position: absolute;
+    margin: auto;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+}
