--- a/css/style.css
+++ b/css/style.css
@@ -1638,7 +1638,7 @@ header {
 }
 .backgrounddiv2 {
     width : 100%;
-    height : 100vh;
+    height : 100px;
     border : 1px solid black;
     background: linear-gradient(to right, #1488CC , #2B32B2);
 }
