--- a/css/style.css
+++ b/css/style.css
@@ -1638,13 +1638,13 @@ header {
 }
 .backgrounddiv2 {
     width : 100%;
-    height : 100px;
+    height : 100vh;
     border : 1px solid black;
     background: linear-gradient(to right, #1488CC , #2B32B2);
 }
 .backgrounddiv3 {
     width : 100%;
-    height : 100vh;
+    height : 100%;
     background: linear-gradient(to right, #1e3c72 , #2a5298);
 }
 
