--- a/css/style.css
+++ b/css/style.css
@@ -1632,19 +1632,19 @@ header {
 
 .backgrounddiv {
     width : 100%;
-    height : 560px;
+    height : 560vh;
     background: linear-gradient(to right, #141E30 , #243B55);  
     border: 5px solid red;
 }
 .backgrounddiv2 {
     width : 100%;
-    height : 560px;
+    height : 560vh;
     border : 1px solid black;
     background: linear-gradient(to right, #1488CC , #2B32B2);
 }
 .backgrounddiv3 {
     width : 100%;
-    height : 560px;
+    height : 560vh;
     background: linear-gradient(to right, #1e3c72 , #2a5298);
 }
 
