--- a/css/example.css
+++ b/css/example.css
@@ -261,3 +261,11 @@ html, body {
     margin-right: 10px;
     font-size: 10px;
 }
+
+
+.webblue {
+    color : #284A85;
+    font-size : 64px;
+    font-weight:normal
+
+}
