--- a/officers.css
+++ b/officers.css
@@ -14,7 +14,7 @@ body {
 .card .btn {
   border-radius: 2px;
   padding: 8px 12px;
-  color: #D18B49;
+  color: #623c8f;
   font-size: 14px;
   font-weight: 500;
   text-decoration: none;
