--- a/css/style.css
+++ b/css/style.css
@@ -1159,7 +1159,7 @@ Primary style
     }
   }
   a.btnCard {
-    background: #0096a0;
+    background: #F64090;
     border-radius: 4px;
     -webkit-box-shadow: 0 2px 0px 0 rgba(0, 0, 0, 0.25);
             box-shadow: 0 2px 0px 0 rgba(0, 0, 0, 0.25);
@@ -1172,7 +1172,7 @@ Primary style
     transition: all 0.1s 0s ease-out;
   }
   .no-touch a.btnCard:hover {
-    background: #00a2ad;
+    background: #F64090;
     -webkit-box-shadow: 0px 8px 2px 0 rgba(0, 0, 0, 0.075);
             box-shadow: 0px 8px 2px 0 rgba(0, 0, 0, 0.075);
     -webkit-transform: translateY(-2px);
@@ -1182,7 +1182,7 @@ Primary style
   }
   .no-touch a.btnCards:active,
   a.btnCard:active {
-    background: #008a93;
+    background: #F64090;
     -webkit-box-shadow: 0 1px 0px 0 rgba(255, 255, 255, 0.25);
             box-shadow: 0 1px 0px 0 rgba(255, 255, 255, 0.25);
     -webkit-transform: translate3d(0, 1px, 0);
