--- a/css/slider.css
+++ b/css/slider.css
@@ -1,5 +1,3 @@
-@import url(https://fonts.googleapis.com/css?family=Concert+One);
-@import url(https://fonts.googleapis.com/css?family=Advent+Pro:300);
 
 body{
 
@@ -172,7 +170,7 @@ box-shadow:30px 0 0 #62B0E0,
 text-align: center;
 width: 100%;
 font-size: 2em;
-font-family: 'Advent Pro', sans-serif;
+font-family: 'Rubik', sans-serif;
 color: #62B0E0;
 }
 .output {
@@ -181,6 +179,6 @@ margin-bottom: -100px;
 text-align: center;
 width: 100%;
 font-size: 2em;
-font-family: 'Advent Pro', sans-serif;
+font-family: 'Rubik', sans-serif;
 color:#62B0E0;
 }
