--- a/css/slider.css
+++ b/css/slider.css
@@ -22,7 +22,7 @@ bottom: 11px;
 left: 69px;
 height: 9px;
 width: 278px;
-box-shadow: 0px 3px 10px -3px rgba(0, 0, 0, 0.51);
+box-shadow: 0px 3px 10px -3px rgb(98,176,224, .6);
 -webkit-transform: skew(62deg);
 }
 input[type=range] {
@@ -49,8 +49,8 @@ input[type="range"]::-webkit-slider-thumb {
     cursor:pointer;
     background-color: transparent;
     width: 30px;
-    height: 18px;
-    box-shadow: 1px 5px 10px -1px rgba(0, 0, 0,0.2),
+    height: 22px;
+    box-shadow: 1px 5px 10px -1px rgb(98,176,224, .6),
     -25px 0 0 10px rgb(98,176,224, .6),
     -75px 0 0 10px rgb(98,176,224, .6),
     -125px 0 0 10px rgb(98,176,224, .6),
