--- a/css/style.css
+++ b/css/style.css
@@ -164,6 +164,12 @@ color: #E74D8E
   margin-bottom: 3rem;
 }
 
+.section3-title2 {
+  text-align: center;
+  margin-bottom: 3rem;
+  color: #fff;
+}
+
 .section3-title h3 {
     color: #FFF;
 }
