--- a/css/style.css
+++ b/css/style.css
@@ -34,13 +34,13 @@ h2 {
     margin-bottom: 1rem;
 }
 
-h3 {
+h3, th {
     color: #633991;
     font-size: 33px;
     font-weight: 500;
 }
 
-h4 {
+h4, td{
     font-size: 20px;
     font-weight: 500;
     color: #633991;
