--- a/css/cards.css
+++ b/css/cards.css
@@ -1,6 +1,6 @@
 @import url(https://fonts.googleapis.com/css?family=Montserrat:400,700|Open+Sans);
 
-.card {
+.cardd {
   background-color: #f4f4f4;
   width: 100px;
 
@@ -8,61 +8,61 @@
   box-shadow: 1px 1px 10px 1px rgba(0,0,0,0.7);
 }
 
-.card-header {
+.cardd-header {
   overflow: hidden;
   width: 100%;
   max-height: 200px;
 }
 
-.card-header img{
+.cardd-header img{
   width: 100%;
 }
 
-.card-content {
+.cardd-content {
   width: 85%;
   margin: 35px auto;
 }
 
-.card-content h3 {
+.cardd-content h3 {
   font-size: 25px;
   margin-bottom: 0;
   color: #303F9F;
   font-family: 'Montserrat', sans-serif;
 }
 
-.card-content h4 {
+.cardd-content h4 {
   font-size: 14px;
   margin-top: 0;
   color: #FF5252;
   font-family: 'Montserrat', sans-serif;
 }
 
-.card-content p {
+.cardd-content p {
   color: #727272;
   font-size: 12px;
   font-family: 'Open Sans', sans-serif;
   
 }
 
-.card-footer {
+.cardd-footer {
   border-top: solid 1px #B6B6B6;
   padding: 5px;
 }
 
-.card-footer ul {
+.cardd-footer ul {
   padding: 0;
   width: 90%;
   margin: auto;
   text-align: center;
 }
 
-.card-footer ul li{
+.cardd-footer ul li{
   display: inline-block;
   list-style: none;
   margin: 5px;
 }
 
-.card-footer ul li i {
+.cardd-footer ul li i {
   font-size: 2em;
   color: #3F51B5;
 }
