--- a/css/cards.css
+++ b/css/cards.css
@@ -2,8 +2,8 @@
 
 .cardd {
   background-color: #f4f4f4;
-  width: 100px;
-
+  width: 300px;
+  margin: 10px auto;
   display: 50px;
   box-shadow: 1px 1px 10px 1px rgba(0,0,0,0.7);
 }
