--- a/css/cards.css
+++ b/css/cards.css
@@ -31,15 +31,15 @@
 }
 
 .cardd-content h4 {
-  font-size: 14px;
+  font-size: 15px;
   margin-top: 0;
-  color: #FF5252;
+  color: #CC9AD3;
   font-family: 'Montserrat', sans-serif;
 }
 
 .cardd-content p {
   color: #727272;
-  font-size: 12px;
+  font-size: 15px;
   font-family: 'Open Sans', sans-serif;
   
 }
